[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omni_align_env"
version = "1.0.0"
description = "OmniAlign: Collective Platform Alignment Environment – OpenEnv"
authors = [{ name = "OmniAlign Team", email = "team@omnialign.ai" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29.1",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
full = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "stable-baselines3>=2.0.0",
    "tensorboard",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cae_env*", "tasks*"]